# coSMicQC

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  example.csv  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: draft-release.yml  publish-docs.yml  publish-pypi.yml  run-tests.yml
docs/: redirector.html
docs/examples/: cosmicqc_in_a_nutshell.py  example.ipynb
docs/presentations/2024-08-27-CU-Anschutz-DBMI-Retreat/: figures.ipynb  figures.py  poster.qmd  readme.md
docs/presentations/2024-08-27-CU-Anschutz-DBMI-Retreat/_extensions/quarto-ext/poster/: typst-template.typ
docs/presentations/2024-09-18-SBI2-Conference/: abstract.md  figures.ipynb  figures.py  poster.qmd  readme.md
docs/src/: code_of_conduct.md  conf.py  contributing.md  examples.md  index.md  python-api.md
docs/src/_templates/: layout.html  navigation.html  page.html  versioning.html
docs/src/examples/: cosmicqc_in_a_nutshell.py  jump_umap_analysis_with_cosmicqc.py
docs/src/presentations/: sbi2-2024.md
logo/source/: package.json
logo/source/src/: Logo.jsx  styles.css
main/: .buildinfo  code_of_conduct.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  presentations.html  py-modindex.html  python-api.html  search.html  searchindex.js
main/.doctrees/: code_of_conduct.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  python-api.doctree
main/_modules/: index.html
main/_modules/src/cosmicqc/: analyze.html  cli.html  frame.html  image.html
main/_sources/: code_of_conduct.md.txt  contributing.md.txt  examples.md.txt
main/_static/: custom.css
main/examples/: cosmicqc_in_a_nutshell.html
main/presentations/: sbi2-2024.html
media/logo/source/: README.md
media/logo/source/src/: Logo.jsx  main.jsx  styles.css
src/cosmicqc/: __init__.py  analyze.py  cli.py  contamination_detector.py  detection.py  frame.py  image.py  qcdataframe.py  scdataframe.py  utils.py
src/cosmicqc/data/: qc_thresholds_default.yml  report_template.html
src/sculptqc/: __init__.py  analyze.py
tests/: conftest.py  test_analyze.py  test_cli.py  test_contamination_detector.py  test_detection.py  test_frame.py  test_image.py  test_large_data.py  test_qcdataframe.py  test_scdataframe.py  utils.py
tests/data/coSMicQC/: test_identifier_outliers_output.parquet
tests/data/coSMicQC/output_data/: test_identifier_outliers_output.parquet
tests/data/cytotable/CFRet_data/: shrink_source_data.py
tests/data/cytotable/NF1_cellpainting_data/: gather_and_create_data.py  gather_contamination_data.py
tests/data/cytotable/NF1_cellpainting_data_shrunken/: NF1_plate2_export_masks.cppipe  Plate_2_with_image_data_shrunken.parquet  create.py  create_image_and_parquet_data.py  create_image_data.py  create_mask_data.py
tests/data/cytotable/NF1_cellpainting_data_shrunken/Plate_2_masks/: B7_01_1_3_DAPI_001_MaskNuclei.tiff  B7_01_3_3_RFP_001_MaskCells.tiff  B7_01_3_3_RFP_001_MaskCytoplasm.tiff  D6_01_1_2_DAPI_001_MaskNuclei.tiff  D6_01_3_2_RFP_001_MaskCells.tiff  D6_01_3_2_RFP_001_MaskCytoplasm.tiff  D7_01_1_1_DAPI_001_MaskNuclei.tiff  D7_01_3_1_RFP_001_MaskCells.tiff  D7_01_3_1_RFP_001_MaskCytoplasm.tiff  F7_01_1_2_DAPI_001_MaskNuclei.tiff  F7_01_3_2_RFP_001_MaskCells.tiff  F7_01_3_2_RFP_001_MaskCytoplasm.tiff  H12_01_1_1_DAPI_001_MaskNuclei.tiff  H12_01_3_1_RFP_001_MaskCells.tiff  H12_01_3_1_RFP_001_MaskCytoplasm.tiff
tests/data/cytotable/nuclear_speckles/: shrink_source_data.py  test_slide1_converted.parquet
v0.0.11/: .buildinfo  code_of_conduct.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  python-api.html  search.html  searchindex.js
v0.0.11/_modules/: index.html
v0.0.11/_modules/src/cosmicqc/: analyze.html  cli.html  frame.html  image.html
v0.1.0/: .buildinfo  code_of_conduct.html  contributing.html  examples.html  genindex.html  index.html  presentations.html  py-modindex.html  python-api.html  search.html  searchindex.js
v0.1.0/_modules/: index.html
v0.1.0/_modules/src/cosmicqc/: analyze.html  cli.html
v0.1.0/presentations/: sbi2-2024.html
v0.1.1/: .buildinfo  code_of_conduct.html  contributing.html  examples.html  genindex.html  index.html  presentations.html  py-modindex.html  python-api.html  search.html  searchindex.js
v0.1.1/_modules/: index.html
v0.1.1/_modules/src/cosmicqc/: analyze.html  cli.html
v0.1.1/presentations/: sbi2-2024.html
v0.1.2/: .buildinfo  code_of_conduct.html  contributing.html  examples.html  genindex.html  index.html  presentations.html  py-modindex.html  python-api.html  search.html
v0.1.2/_modules/: index.html
v0.1.2/_modules/src/cosmicqc/: analyze.html  cli.html
v0.1.2/examples/: cosmicqc_in_a_nutshell.html
v0.1.2/presentations/: sbi2-2024.html
v0.1.3/: .buildinfo  code_of_conduct.html  contributing.html  examples.html  genindex.html  index.html  presentations.html  py-modindex.html  python-api.html  search.html  searchindex.js
v0.1.3/_modules/: index.html
v0.1.3/_modules/src/cosmicqc/: analyze.html  cli.html
v0.1.3/examples/: cosmicqc_in_a_nutshell.html
v0.1.3/presentations/: sbi2-2024.html
v0.1.4/: .buildinfo  code_of_conduct.html  contributing.html  examples.html  genindex.html  index.html  presentations.html  py-modindex.html  python-api.html  search.html  searchindex.js
v0.1.4/_modules/: index.html
v0.1.4/_modules/src/cosmicqc/: analyze.html  cli.html
v0.1.4/examples/: cosmicqc_in_a_nutshell.html
v0.1.4/presentations/: sbi2-2024.html
v0.1.5/: .buildinfo  code_of_conduct.html  contributing.html  examples.html  genindex.html  index.html  presentations.html  py-modindex.html  python-api.html  search.html
v0.1.5/_modules/: index.html
v0.1.5/_modules/src/cosmicqc/: analyze.html  cli.html
v0.1.5/_sources/: presentations.md.txt
v0.1.5/_sources/examples/: cosmicqc_in_a_nutshell.ipynb.txt
v0.1.5/examples/: cosmicqc_in_a_nutshell.html
v0.1.5/presentations/: sbi2-2024.html
(+4 files in other folders)
