[tool.poetry]
name = "coSMicQC"
version = "0.0.10.post7.dev0+d8d16e9"
description = "coSMicQC is a software tool for single-cell quality control of morphology datasets."
authors = ["Way Science Community"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "cosmicqc", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = [
  {version = "<2.2.2", python = "<3.9"},
  {version = "^2.2.2", python = ">=3.9"}
] # used for data management
scipy = [
  {version = "<1.13.0", python = "<3.9"},
  {version = "^1.13.0", python = ">=3.9"}
] # used for calculations
pyarrow = "^16.0.0" # used for data ingest and export
pyyaml = "^6.0.1" # used for reading yaml configuration files
fire = "^0.6.0" # used for CLI generation
jinja2 = "^3.1.4" # used for template capabilities
plotly = "^5.22.0" # used for report generation capabilities
kaleido = "0.2.1" # used for plotly dependencies
ipython = "^8.12.3" # used for environment detection
scikit-image = [
  {version = "^0.19.3", python = "<3.9"},
  {version = ">0.19.3", python = ">=3.9"}
] # used for image processing
pywavelets = [
  {version = "^1.4.1", python = "<3.9"},
  {version = ">1.4.1", python = ">=3.9"}
] # dependency of scikit-image
opencv-python = "^4.10.0.84" # used for image modifications in cytodataframe

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0" # provides testing capabilities for project
html2image = "^2.0.4.3" # used for report html export to image for tests
sqlalchemy = ">=1.3.6,<2" # used for test data generation
jupyterlab = "^4.2.3" # used for example notebook work
jupytext = "^1.16.2" # used for example notebook formatting
jupyterlab-code-formatter = "^2.2.1" # used for example notebook formatting
black = "^24.4.2" # used for example notebook formatting
isort = "^5.13.2" # used for example notebook formatting
coverage = "^7.6.0" # added to generate test coverage reports
cytotable = "^0.0.10" # added for preparing data for cosmicqc in examples
botocore = "^1.35.11" # used to avoid dependency resolution issues during installs
hvplot = "^0.10.0" # used for visualizing large plot data
datashader = "^0.16.3" # used for visualization options with hvplot
umap-learn = "^0.5.6" # added for demonstrating results after using cosmicqc
ipywidgets = "^8.1.5" # added for compatibility in notebooks with umap-learn dependency tqdm
pycytominer = "^1.1.0" # added for demonstrating results with cosmicqc
dask = {version="^2024.8.0", extras=["dataframe"]} # added to avoid warnings from datashader implementation
selenium = "^4.24.0" # used for rendering plots as images within example notebooks

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0" # used for rendering docs into docsite
myst-parser = "^3.0.0" # used for rendering markdown through sphinx
myst-nb = "^1.1.1" # used for rendering notebooks through myst parser
sphinx-multiversion = {git = "https://github.com/J-RN/sphinx-multiversion", rev = "a77f0c862dace3a62c18fc866da60ef7dde3873d"} # used for extension sphinx-multiversion and to fix git-based challenges with default branch handling
dunamai = "^1.22.0" # used for gathering version data for docsite
sphinx-wagtail-theme = "^6.3.0"

[tool.poetry.scripts]
cosmicqc = "cosmicqc.cli:cli_analyze"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # isort
    "I",
    # pyflakes
    "F",
    # pylint
    "PL",
    # mccabe
    "C90",
    # ruff
    "RUF",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-simplify
    "SIM",
    # flake8-annotations
    "ANN"
]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` and `F401` (unused imports) in all `__init__.py` files
"__init__.py" = ["E402", "F401"]
# ignore typing rules for tests
"tests/*" = ["ANN201", "PLR0913"]

[tool.jupytext]
formats = "ipynb,py:light"

[tool.pytest.ini_options]
markers = [
    "generate_report_image: tests which involve the creation of report images.",
]

[tool.coverage.run]
# settings to avoid errors with cv2 and coverage
# see here for more: https://github.com/nedbat/coveragepy/issues/1653
omit = [
    "config.py",
    "config-3.py",
]

# set dynamic versioning capabilities for project
[tool.poetry-dynamic-versioning]
enable = false
style = "pep440"
vcs = "git"

# specify where version replacement is performed
[tool.poetry-dynamic-versioning.substitution]
files = ["src/cosmicqc/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.setuptools_scm]
root = "."
